[package]
name = "xz3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
