[package]
name = "xz3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
hex = "0.4.3"
indicatif = { version = "0.17.8", features = ["tokio"] }
log = "0.4.21"
log4rs = "1.3.0"
md5 = "0.7.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
